web/scripts/i18n-governance/fixtures/invalid-semantic-title-locale-object/src/modules/demo/UnsafeSemanticTitle.ts
// Copyright (c) 2025-2026 GeWuYou
// SPDX-License-Identifier: Apache-2.0

export const demoColumn = {
  key: 'status',
  semanticTitle: {
    'zh-CN': '状态',
    'en-US': 'Status',
  },
};
